--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,8 +126,6 @@
     <string name="pref_calibration_summary">You can manually calibrate the ruler via the "calibrate" option in the action menu.</string>
     <string name="pref_disclaimer_summary">This app is not a professionally calibrated measuring device. Technische Universität Darmstadt is not liable for any damage caused by use of this app.</string>
     <string name="help_privacy_heading">Privacy Info</string>
-    <string name="help_permissions_heading">Permissions</string>
-    <string name="help_permissions_description">Privacy Friendly Ruler does not use any permissions.</string>
     <string name="help_category_options">Settings</string>
     <string name="help_units">Left and Right Ruler</string>
     <string name="pref_units_summary">You can display a cm ruler, an inch ruler or no ruler on the left and on the right side of the screen. Both rulers can be set separately in the option menu.</string>
@@ -136,7 +134,8 @@
     <string name="help_intro">The Privacy Friendly Ruler App turns Your Phone into a ruler for quick on the fly measurements.</string>
     <string name="help_camera_ruler_heading">Camera Ruler</string>
     <string name="help_camera_ruler">You can choose to take a picture with the camera or use one from the gallery. Be sure that all the relevant objects are in the same plane and the picture is taken perpendicularly to that plane. Choose the desired reference object from the menu on the tor right, place the green shape over the reference object in the picture and press the button in the bottom right. Now you can choose the thing to measure via the button on the bottom right. You can measure length of lines and areas of triangles, circles and tetragons.</string>
-
+    <string name="help_permission">Permissions</string>
+    <string name="help_permission_answer">Privacy Friendly Camera Ruler does not require any permission for taking and measuring a picture from the camera. Taking a picture from the gallery requires the Read External Storage permission as most pictures are not stored in the internal memory.</string>
 
     <!--###ABOUT###-->
     <string name="about">About</string>
