Turned line in calibration to vertical direction. Turned the line to be measured during the calibration to vertical as suggested by feedback on the standalone ruler app.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,7 +105,7 @@
 
     <!-- ###CALIBRATION### -->
     <string name="measureLineHeading">1. Measure</string>
-    <string name="measureLine">Please measure the length of the line below as precisely as possible.</string>
+    <string name="measureLine">Please measure the length of the line on the left as precisely as possible.</string>
     <string name="headingEnter">2. Enter Measured Length</string>
     <string name="calibrationMM">mm</string>
     <string name="calibrationInch">inch</string>
