--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -96,6 +96,31 @@
     <string name="two_hundred_krona_note">200 Swedish Krona Note</string>
     <string name="five_hundred_krona_note">500 Swedish Krona Note</string>
     <string name="thousand_krona_note">1000 Swedish Krona Note</string>
+    <!-- ###RUSSIAN RUBLE COINS### -->
+    <string name="ten_kopeyka_coin">10 Kopeyka Coin</string>
+    <string name="fifty_kopeyka_coin">50 Kopeyka Coin</string>
+    <string name="one_ruble_coin">1 Ruble Coin</string>
+    <string name="two_ruble_coin">2 Ruble Coin</string>
+    <string name="five_ruble_coin">5 Ruble Coin</string>
+    <string name="ten_ruble_coin">10 Ruble Coin</string>
+    <!-- ###RUSSIAN RUBLE NOTES### -->
+    <string name="fifty_ruble_note">50 Ruble Note</string>
+    <string name="hundred_ruble_note">100 Ruble Note</string>
+    <string name="five_hundred_ruble_note">500 Ruble Note</string>
+    <string name="thousand_ruble_note">1000 Ruble Note</string>
+    <string name="five_thousand_ruble_note">5000 Ruble Note</string>
+    <!-- ###JAPANESE YEN COINS### -->
+    <string name="one_yen_coin">1¥ Coin</string>
+    <string name="five_yen_coin">5¥ Coin</string>
+    <string name="ten_yen_coin">10¥ Coin</string>
+    <string name="fifty_yen_coin">50¥ Coin</string>
+    <string name="hundred_yen_coin">100¥ Coin</string>
+    <string name="five_hundred_yen_coin">500¥ Coin</string>
+    <!-- ###JAPANESE YEN NOTES### -->
+    <string name="thousand_yen_note">1000¥ Note</string>
+    <string name="two_thousand_yen_note">2000¥ Note</string>
+    <string name="five_thousand_yen_note">5000¥ Note</string>
+    <string name="ten_thousand_yen_note">10 000¥ Note</string>
     <!-- ###US PAPER### -->
     <string name="letter_paper">Letter Paper</string>
     <string name="legal_paper">Legal Paper</string>
