--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,12 +45,12 @@
 
     <!-- ###PREDEFINED REFERENCE OBJECTS### -->
     <!-- ###US COINS### -->
-    <string name="us_penny_coin">Penny</string>
-    <string name="us_nickel_coin">Nickel</string>
-    <string name="us_dime_coin">Dime</string>
-    <string name="us_quarter_coin">Quarter Dollar</string>
+    <string name="us_penny_coin">US Penny Coin</string>
+    <string name="us_nickel_coin">5 USD-Cent Coin (Nickel)</string>
+    <string name="us_dime_coin">10 USD-Cent Coin (Dime)</string>
+    <string name="us_quarter_coin">25 USD-Cent Coin (Quarter)</string>
     <string name="us_dollar_coin">1$ Coin</string>
-    <string name="fifty_usd_cent_coin">50¢ Coin</string>
+    <string name="fifty_usd_cent_coin">50 USD-Cent Coin</string>
     <!-- ###EURO COINS### -->
     <string name="one_euro_cent_coin">1 Euro-Cent Coin</string>
     <string name="two_euro_cent_coin">2 Euro-Cent Coin</string>
@@ -62,11 +62,11 @@
     <string name="two_euro_coin">2€ Coin</string>
     <!-- ###BRITISH POUND COINS### -->
     <string name="gb_penny_coin">British Penny Coin</string>
-    <string name="two_pence_coin">2p Coin</string>
-    <string name="five_pence_coin">5p Coin</string>
-    <string name="ten_pence_coin">10p Coin</string>
-    <string name="twenty_pence_coin">20p Coin</string>
-    <string name="fifty_pence_coin">50p Coin</string>
+    <string name="two_pence_coin">2 Pence Coin</string>
+    <string name="five_pence_coin">5 Pence Coin</string>
+    <string name="ten_pence_coin">10 Pence Coin</string>
+    <string name="twenty_pence_coin">20 Pence Coin</string>
+    <string name="fifty_pence_coin">50 Pence Coin</string>
     <string name="one_pound_coin">1£ Coin</string>
     <string name="two_pound_coin">2£ Coin</string>
     <!-- ###US DOLLAR COINS### -->
@@ -147,8 +147,7 @@
     <string name="calibrationMM">mm</string>
     <string name="calibrationInch">inch</string>
     <string name="calibrateConfirmButton">Calibrate</string>
-    <string name="calibrationWarning">Manual calibration does not eliminate inaccuracies due to rounding.
-        Do not use this app as a professionally calibrated measuring device.</string>
+    <string name="calibrationWarning">Manual calibration does not eliminate inaccuracies due to rounding. Do not use this app as a professionally calibrated measuring device.</string>
     <string name="calibrate">Calibrate</string>
     <string name="noInput">Please input the length of the line.</string>
     <string name="calibrationDone">Calibration finished.</string>
@@ -167,10 +166,10 @@
     <string name="help_units">Left and Right Ruler</string>
     <string name="pref_units_summary">You can display a cm ruler, an inch ruler or no ruler on the left and on the right side of the screen. Both rulers can be set separately in the option menu.</string>
     <string name="help_angles">Angle Measure</string>
-    <string name="pref_angles_summary">You can display an angle measure in degrees or radian on the left side of the screen.</string>
+    <string name="pref_angles_summary">You can display an angle measure in degrees or radian instead of the ruler on the left side of the screen.</string>
     <string name="help_intro">The Privacy Friendly Tape Measure turns Your Phone into a ruler for quick on the fly measurements.</string>
     <string name="help_camera_ruler_heading">Camera Ruler</string>
-    <string name="help_camera_ruler">You can choose to take a picture with the camera or use one from the gallery. Be sure that all the relevant objects are in the same plane and the picture is taken perpendicularly to that plane. Choose the desired reference object from the menu on the tor right, place the green shape over the reference object in the picture and press the button in the bottom right. Now you can choose the thing to measure via the button on the bottom right. You can measure length of lines and areas of triangles, circles and tetragons.</string>
+    <string name="help_camera_ruler">You can choose to take a picture with the camera or use one from the gallery. Be sure that all the relevant objects are in the same plane and the picture is taken perpendicularly to that plane. Choose the desired reference object from the menu on the top right, place the green shape over the reference object in the picture and press the button in the bottom right. Now you can choose the thing to measure via the button on the bottom right. You can measure length of lines and areas of triangles, circles and tetragons.</string>
     <string name="help_permission">Permissions</string>
     <string name="help_permission_answer">Privacy Friendly Tape Measure does not require any permission for taking and measuring a picture from the camera. Taking a picture from the gallery requires the Read External Storage permission as most pictures are not stored in the internal memory.</string>
 
@@ -189,16 +188,14 @@
 
     <!-- ###SETTINGS### -->
     <!-- ###SCREEN RULER### -->
-    <string name="title_activity_settings">Settings</string><string name="pref_ruler">Ruler Settings</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="pref_ruler">Ruler Settings</string>
     <string name="pref_leftruler">Left Ruler</string>
     <string name="pref_leftruler_verbose">What should be displayed on left ruler?</string>
-    <string name="pref_leftruler_default">cm</string>
+    <string name="pref_leftruler_default" translatable="false">cm</string>
     <string name="pref_rightruler">Right Ruler</string>
     <string name="pref_rightruler_verbose">What should be displayed on right ruler?</string>
     <string name="pref_rightruler_default">inch</string>
-    <string name="pref_anglemeasure">Angle Measure</string>
-    <string name="pref_anglemeasure_verbose">Turn on scale for angle measuring?</string>
-    <string name="pref_anglemeasure_default">off</string>
     <string name="ruler_cm">Ruler (cm)</string>
     <string name="ruler_inch">Ruler (inch)</string>
     <string name="ruler_degree">Angle Measure (degree)</string>
@@ -208,7 +205,9 @@
     <string name="camera_ruler_settings">Camera Ruler Settings</string>
     <string name="pref_units_of_measurement">Units of measurement</string>
     <string name="pref_uom_verbose">What units of measurement to use in the screen ruler?</string>
-    <string name="pref_uom_default">mm</string>
+    <string name="units_si">SI units</string>
+    <string name="units_imperial">imperial</string>
+    <string name="pref_uom_default" translatable="false">mm</string>
     <string name="pref_autodetect">Autodetect circular references</string>
     <string name="pref_type_selection">Reference Type Selection</string>
     <string name="pref_type_selection_verbose">What reference object types to use?</string>
@@ -264,7 +263,7 @@
     <string name="slide2_text">You can choose to take a picture with the camera or use one from the gallery. Be sure that all the relevant objects are in the same plane and the picture is taken perpendicularly to that plane.</string>
 
     <string name="slide3_heading">How to measure</string>
-    <string name="slide3_text">Choose the desired reference object from the menu on the tor right, place the green shape over the reference object in the picture and press the button in the bottom right. Now you can choose the thing to measure via the button on the bottom right. You can measure length of lines and areas of triangles, circles and tetragons.</string>
+    <string name="slide3_text">Choose the desired reference object from the menu on the top right, place the green shape over the reference object in the picture and press the button in the bottom right. Now you can choose the thing to measure via the button on the bottom right. You can measure length of lines and areas of triangles, circles and tetragons.</string>
 
     <string name="next">Next</string>
     <string name="skip">Skip</string>
