--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -4,20 +4,20 @@
 
 
     <!-- ###DRAWER###-->
-    <string name="action_ruler">Линейка на екране</string>
+    <string name="action_ruler">Линейка на экране</string>
     <string name="action_camera">Камера-линейка</string>
-    <string name="action_help">Помощ</string>
+    <string name="action_help">Помощь</string>
     <string name="action_about">Информация</string>
-    <string name="action_settings">Настроики</string>
+    <string name="action_settings">Настройки</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
 
     <!-- ###RULER### -->
-    <string name="screen_ruler">Линейка на екране</string>
+    <string name="screen_ruler">Линейка на экране</string>
     <string name="action_calibration">Калибрировать</string>
-    <string name="action_reset_calibration">Сбросить калибрацию</string>
+    <string name="action_reset_calibration">Сбросить калибрование</string>
 
 
     <!-- ###CAMERA### -->
@@ -26,19 +26,19 @@
     <string name="from_gallery">Фото из галереи</string>
     <string name="reference_self_intersecting">Эталон не должен пересекать сам себя.</string>
     <string name="camera_ruler">Камера-линейка</string>
-    <string name="camera_crash">Приложеня камера рухнуло.</string>
-    <string name="gallery_crash">Приложеня галерия рухнуло.</string>
-    <string name="reference_phase_title">Помесьтите эталон</string>
+    <string name="camera_crash">Приложенья камера рухнуло.</string>
+    <string name="gallery_crash">Приложенья галерея рухнуло.</string>
+    <string name="reference_phase_title">Поместите эталон</string>
     <string name="reference_phase_subtitle">Эталон:</string>
     <string name="measurement_phase_title">Измерить</string>
     <string name="new_tetragon">Новый четырёхугольник</string>
-    <string name="new_triangle">Новый триугольник</string>
+    <string name="new_triangle">Новый треугольник</string>
     <string name="new_circle">Новый круг</string>
     <string name="new_line">Новая линия</string>
     <string name="confirm_reference">Одобрить эталон</string>
     <string name="length">Длинна:</string>
     <string name="area">Площадь:</string>
-    <string name="self_intersection_warning">Невозможно выщитать площад самопересекающеисово многоугольника.</string>
+    <string name="self_intersection_warning">Невозможно высчитать площадь самопересекающиесяво многоугольника.</string>
 
 
     <!-- ###PREDEFINED REFERENCE OBJECTS### -->
@@ -99,14 +99,14 @@
     <string name="fifty_kopeyka_coin">Монета в 50 копеек</string>
     <string name="one_ruble_coin">Монета в 1 рубль</string>
     <string name="two_ruble_coin">Монета в 2 рубля</string>
-    <string name="five_ruble_coin">Монета в 5 рублеи</string>
-    <string name="ten_ruble_coin">Монета в 10 рублеи</string>
+    <string name="five_ruble_coin">Монета в 5 рублей</string>
+    <string name="ten_ruble_coin">Монета в 10 рублей</string>
     <!-- ###RUSSIAN RUBLE NOTES### -->
-    <string name="fifty_ruble_note">Банкнота в 50 рублеи</string>
-    <string name="hundred_ruble_note">Банкнота в 100 рублеи</string>
-    <string name="five_hundred_ruble_note">Банкнота в 500 рублеи</string>
-    <string name="thousand_ruble_note">Банкнота в 1000 рублеи</string>
-    <string name="five_thousand_ruble_note">Банкнота в 5000 рублеи</string>
+    <string name="fifty_ruble_note">Банкнота в 50 рублей</string>
+    <string name="hundred_ruble_note">Банкнота в 100 рублей</string>
+    <string name="five_hundred_ruble_note">Банкнота в 500 рублей</string>
+    <string name="thousand_ruble_note">Банкнота в 1000 рублей</string>
+    <string name="five_thousand_ruble_note">Банкнота в 5000 рублей</string>
     <!-- ###JAPANESE YEN COINS### -->
     <string name="one_yen_coin">Монета в 1¥</string>
     <string name="five_yen_coin">Монета в 5¥</string>
@@ -145,31 +145,31 @@
     <string name="calibrationMM">мм</string>
     <string name="calibrationInch">дюймы</string>
     <string name="calibrateConfirmButton">Калибрировать</string>
-    <string name="calibrationWarning">Ручная калибрация не устраняет неточности вызваные округлением.</string>
+    <string name="calibrationWarning">Ручное калибрование не устраняет неточности вызванные округлением.</string>
     <string name="calibrate">Калибрировать</string>
     <string name="noInput">Введите длину линии.</string>
-    <string name="calibrationDone">Калибрирование завершено.</string>
+    <string name="calibrationDone">Калибрование завершено.</string>
 
 
     <!--###HELP###-->
-    <string name="help">Помощ</string>
+    <string name="help">Помощь</string>
     <string name="help_overview_heading">Обзор</string>
-    <string name="help_calibration">Ручная Калибрация</string>
+    <string name="help_calibration">Ручное калибрование</string>
     <string name="help_disclaimer">Предупреждение</string>
-    <string name="help_category_calibration">Калибрация</string>
+    <string name="help_category_calibration">Калибрование</string>
     <string name="pref_calibration_summary">Выбрав пункт \"Калибрировать\" в меню Вы можете в ручную калибрировать линейку на экране.</string>
     <string name="pref_disclaimer_summary">Эта аппликация не является профессионально настроенным измерительным устройством. Эту аппликацию можно калибрировать в ручную, что уменьшит ошибку. Несмотря на это зависимо от устройства возможна ошибка округленья.</string>
-    <string name="help_privacy_heading">Часная информация</string>
-    <string name="help_category_options">Настроики</string>
+    <string name="help_privacy_heading">Частная информация</string>
+    <string name="help_category_options">Настройки</string>
     <string name="help_units">Правая и левая линейка</string>
     <string name="pref_units_summary">Вы можете включить сантиметровую или дюймовую линейку на левой и правой стороне экрана. Обе линейки могут быть установлены независимо друг от друга.</string>
     <string name="help_angles">Угломер</string>
     <string name="pref_angles_summary">За места левой линейки Вы можете включить угломер на левой стороне экрана в мере градусов или радианов.</string>
-    <string name="help_intro">Приложение Privacy Friendly Линейка превращает Ваш телефон в линейку в случае, если Вам нужно что-то измерить но под рукой нет измерительново устройства.</string>
+    <string name="help_intro">Приложение Privacy Friendly Рулетка превращает Ваш телефон в линейку в случае, если Вам нужно что-то измерить но под рукой нет измерительного устройства.</string>
     <string name="help_camera_ruler_heading">Камера-линейка</string>
-    <string name="help_camera_ruler">Вы можете снять фотографию камерои или выбрать фотографию из галерий. Снимите фотографию так, чтобы все важные обекты были в одной плоскости и телефон был паралельно к этой плоскости. Выберите подходящий эталон изменю в верхнем правом углу, поместите зелёною фигуру над эталоном в фотографии и одобрите выбор кнопкой в нижнем правом углу. Теперь Вы можете выбрать фигуру, которою измерить, из меню в нижнем правом углу. Вы можете мерить длину линий и площадь триугольников, четырёхугольников и кругов.</string>
+    <string name="help_camera_ruler">Вы можете снять фотографию камерой или выбрать фотографию из галереи. Снимите фотографию так, чтобы все важные объекты были в одной плоскости и телефон был параллельно к этой плоскости. Выберите подходящий эталон изменю в верхнем правом углу, поместите зелёною фигуру над эталоном в фотографии и одобрите выбор кнопкой в нижнем правом углу. Теперь Вы можете выбрать фигуру, которою измерить, из меню в нижнем правом углу. Вы можете мерить длину линий и площадь треугольников, четырёхугольников и кругов.</string>
     <string name="help_permission">Разрешения</string>
-    <string name="help_permission_answer">Privacy Friendly Рулетка ненуждаетса в разрешенях чтобы снять фотографию камерой и измереть её. Чтобы измереть фотографию из галерий етому приложенью нужно разрешене Read External Storage, так как большенство фотографий не находятса в встроеной памяти телефона.</string>
+    <string name="help_permission_answer">Privacy Friendly Рулетка не нуждается в разрешеньях чтобы снять фотографию камерой и измерить её. Чтобы измерить фотографию из галереи этому приложенью нужно разрешение Read External Storage, так как большинство фотографий не находятся в встроенной памяти телефона.</string>
 
     <!--###ABOUT###-->
     <string name="about">Информация</string>
@@ -183,27 +183,27 @@
 
     <!-- ###SETTINGS### -->
     <!-- ###SCREEN RULER### -->
-    <string name="title_activity_settings">Настроики</string>
-    <string name="pref_ruler">Настроики линейки</string>
+    <string name="title_activity_settings">Настройки</string>
+    <string name="pref_ruler">Настройки линейки</string>
     <string name="pref_leftruler">Левая линейка</string>
-    <string name="pref_leftruler_verbose">Что паказать на левой стороне экрана?</string>
+    <string name="pref_leftruler_verbose">Что показать на левой стороне экрана?</string>
     <string name="pref_rightruler">Правая линейка</string>
-    <string name="pref_rightruler_verbose">Что паказать на правой стороне экрана?</string>
+    <string name="pref_rightruler_verbose">Что показать на правой стороне экрана?</string>
     <string name="ruler_cm">Линейка (см)</string>
     <string name="ruler_inch">Линейка (дюйм)</string>
     <string name="ruler_degree">Угломер (градус)</string>
     <string name="ruler_radian">Угломер (радиан)</string>
     <string name="ruler_off">Нечего</string>
     <!-- ###CAMERA RULER### -->
-    <string name="camera_ruler_settings">Настроики камера-линейки</string>
+    <string name="camera_ruler_settings">Настройки камера - линейки</string>
     <string name="pref_units_of_measurement">Единицы измерения</string>
-    <string name="pref_uom_verbose">Какие еденицы измерентя использовать в камера-линейке?</string>
-    <string name="units_si">Еденицы СИ</string>
-    <string name="units_imperial">Еденицы США</string>
+    <string name="pref_uom_verbose">Какие единицы измерения использовать в камера - линейке?</string>
+    <string name="units_si">Единицы СИ</string>
+    <string name="units_imperial">Единицы США</string>
     <string name="pref_autodetect">Автоматически опознать круглые эталоны</string>
     <string name="pref_type_selection">Выбор типов эталона</string>
-    <string name="pref_type_selection_verbose">Эталоны каких типов изпользовать?</string>
-    <string name="pref_type_selection_summary">Выберете, эталоны каких типов Вы не хотите изпользовать.</string>
+    <string name="pref_type_selection_verbose">Эталоны каких типов использовать?</string>
+    <string name="pref_type_selection_summary">Выберете, эталоны каких типов Вы не хотите использовать.</string>
     <string name="pref_edit_user_def_refs">Установить свои эталоны</string>
     <!-- ###OBJECT TYPES### -->
     <string name="category_us_coins">Монеты долларов США</string>
@@ -223,48 +223,48 @@
 
 
     <!-- ###USER DEFINED REFERENCE EDITOR### -->
-    <string name="title_activity_ref_editor">Pašdefinētas references</string>
-    <string name="title_activity_ref_viewer">Pašdefinētas references</string>
-    <string name="list_item">Brīva vieta</string>
-    <string name="edit_dialog_title">Mainīt referenci</string>
-    <string name="toast_input_failure">Nederīgi dati.</string>
-    <string name="toast_edit_done">Pašdefinēta reference iestatīta.</string>
-    <string name="toast_delete_done">Pašdefinētā reference izdzēsta.</string>
-    <string name="edit_name">Vārds:</string>
-    <string name="edit_shape">Forma:</string>
-    <string name="edit_line">Līnija</string>
-    <string name="edit_circle">Aplis</string>
-    <string name="edit_tetragon">Četrstūris</string>
-    <string name="edit_size">Izmērs:</string>
-    <string name="cancel">Atcelt</string>
-    <string name="delete">Izdzēst</string>
+    <string name="title_activity_ref_editor">Установка своих эталонов</string>
+    <string name="title_activity_ref_viewer">Свои эталоны</string>
+    <string name="list_item">Свободное место</string>
+    <string name="edit_dialog_title">Поменять эталон</string>
+    <string name="toast_input_failure">Нелегальные даные.</string>
+    <string name="toast_edit_done">Эталон устроен.</string>
+    <string name="toast_delete_done">Эталон удалён.</string>
+    <string name="edit_name">Название:</string>
+    <string name="edit_shape">Форма:</string>
+    <string name="edit_line">Линия</string>
+    <string name="edit_circle">Круг</string>
+    <string name="edit_tetragon">Четырёхугольник</string>
+    <string name="edit_size">Размер:</string>
+    <string name="cancel">Отменить</string>
+    <string name="delete">Удалить</string>
 
 
     <!-- ### DISCLAIMER DIALOG ### -->
-    <string name="disclaimer_dialog_title">Brīdinājums</string>
-    <string name="disclaimer">Šī lietotne nav profesionāli kalibrēts mērinstruments. Ekrāna lineālu var manuāli kalibrēt. Tas samazina kļūdu, bet atkarīgi no telefona vēl aizvien ir iespējamas apaļošanas kļūdas.</string>
-    <string name="disclaimer_check">Es izlasiju brīdinājumu par iespējamām apaļošanas kļūdām.</string>
-    <string name="disclaimer_check_toast">Lūdzu apstipriniet, ka jūs izlasījāt brīdinājumu.</string>
+    <string name="disclaimer_dialog_title">Предупреждение</string>
+    <string name="disclaimer">Эта аппликация не является профессионально настроенным измерительным устройством. Эту аппликацию можно калибрировать в ручную, что уменьшит ошибку. Несмотря на это зависимо от устройства возможна ошибка округленья.</string>
+    <string name="disclaimer_check">Я прочитал дисклеймер о потенциальных ошибок округленья.</string>
+    <string name="disclaimer_check_toast">Отметьте, пожалуйста, что Вы прочитали дисклеймер.</string>
 
 
     <!-- ### TUTORIAL SCREEN ### -->
-    <string name="slide1_heading">Sveicināti</string>
-    <string name="slide1_text">Mit Privacy Friendly Maßband können Sie Objekte ausmessen, die größer als ihr Smartphone sind. Dazu müssen Sie ein Foto aufnehmen, auf dem das Objekt zusammen mit einem Gegenstand bekannter Größe (Referenzobjekt), wie z.B. einer Münze, zu sehen ist.</string>
+    <string name="slide1_heading">Добро пожаловать</string>
+    <string name="slide1_text">С помощью Privacy Friendly Рулетка Вы можете измерить объекты, которые больше Вашего телефона. Для этого Вам нужно сфотографировать измеряемые объект вместе с другим объектом знакомого размера (эталон), например монетой.</string>
 
-    <string name="slide2_heading">Kā mērīt</string>
-    <string name="slide2_text">Jūs varat uzņemt fotogrāfiju ar telefona kameru vai izvēlēties attēlu no galerijas. Nodrošiniet, ka visi svarīgie objekti ir vienā plaknē un ka fotogrāfija tika uzņemta perpendikulāri tai plaknē.</string>
+    <string name="slide2_heading">Как измерять</string>
+    <string name="slide2_text">Вы можете снять фотографию камерой или выбрать фотографию из галереи. Снимите фотографию так, чтобы все важные объекты были в одной плоскости и телефон был параллельно к этой плоскости.</string>
 
-    <string name="slide3_heading">Kā mērīt</string>
-    <string name="slide3_text">Izvēleties vajadzīgo referenci izvēlnē augšējā labajā stūrī, novietojiet zaļo figūru uz references attēlā un apstipriniet ar pogu apakšējā labajā stūrī. Tagad Jūs varat izvēlēties figūru, kuru Jūs gribat izmērīt no izvēlnes apakšējā labajā stūrī. Jūs varat mērīt līniju garumu un trīstūru, četrstūru und apļu platību.</string>
+    <string name="slide3_heading">Как измерять</string>
+    <string name="slide3_text">Выберите подходящий эталон изменю в верхнем правом углу, поместите зелёною фигуру над эталоном в фотографии и одобрите выбор кнопкой в нижнем правом углу. Теперь Вы можете выбрать фигуру, которою измерить, из меню в нижнем правом углу. Вы можете мерить длину линий и площадь треугольников, четырёхугольников и кругов.</string>
 
-    <string name="next">Tālāk</string>
-    <string name="skip">Izlaist</string>
-    <string name="okay">Labi</string>
-    <string name="view_help">Parādīt palīdzību</string>
-    <string name="help_uom">Mērvienības</string>
-    <string name="help_ref_types">Referenču tipu izvēle</string>
-    <string name="help_ref_editor">Pašdefinētu referenču pārvalde</string>
-    <string name="pref_uom_summary">Jūs varat iestatīt, kādas mērvienības izmantot kameras lineālā.</string>
-    <string name="pref_ref_types_summary">Jūs varat slēpt visas noteiktu tipu references. Tās netiks uzrādītas izvēlnē ar pieejamām referncēm.</string>
-    <string name="pref_ref_editor_summary">Šeit Jūs varat iestatīt un pārvaldīt (maksimāli 10) pašdefinētas references.</string>
+    <string name="next">Дальше</string>
+    <string name="skip">Пропустить</string>
+    <string name="okay">Хорошо</string>
+    <string name="view_help">Показать помощь</string>
+    <string name="help_uom">Единицы измерения</string>
+    <string name="help_ref_types">Выбор типов эталонов</string>
+    <string name="help_ref_editor">Менеджмент своих эталонов</string>
+    <string name="pref_uom_summary">Вы можете выбрать, какие единицы измерения камера-линейка будет использовать.</string>
+    <string name="pref_ref_types_summary">Вы можете скрыть эталоны определённых типов. Эти эталоны не будут показываться в меню выбора эталонов.</string>
+    <string name="pref_ref_editor_summary">Здесь Вы можете установить собственные эталоны (максимум 10).</string>
 </resources>
